--- a/releases/v0.19.0-rc0.yaml
+++ b/releases/v0.19.0-rc0.yaml
@@ -2,7 +2,7 @@
 version: v0.19.0-rc0
 name: 0.19.0-rc0
 branch: release-0.19
-status: installers
+status: released
 components:
   shipyard: 35f3468294128ce32bec0d775ff3131127dd9076
   admiral: fae5e9c116d213a3585a11875bc57a02264ce204
@@ -10,3 +10,5 @@ components:
   lighthouse: 025858cc14929d14f886d2f3fb5df874e8ee72e0
   submariner: ab2f029703445034cd9fd1499fe3e67c844cfd29
   submariner-operator: 854b1e7d2f94fe54e0475a772a40221419ca2056
+  subctl: 732d9499a547ba63607813a0c80b4ec646fd5112
+  submariner-charts: 29110cd64a06208167026090881f96166eab0123
