--- a/releases/v0.19.0-rc1.yaml
+++ b/releases/v0.19.0-rc1.yaml
@@ -2,6 +2,7 @@
 version: v0.19.0-rc1
 name: 0.19.0-rc1
 branch: release-0.19
-status: shipyard
+status: admiral
 components:
   shipyard: 35f3468294128ce32bec0d775ff3131127dd9076
+  admiral: 34cb237fa407421eb77ffefe908249af2b58b8d5
