--- a/releases/v0.19.0-rc1.yaml
+++ b/releases/v0.19.0-rc1.yaml
@@ -2,7 +2,10 @@
 version: v0.19.0-rc1
 name: 0.19.0-rc1
 branch: release-0.19
-status: admiral
+status: projects
 components:
   shipyard: 35f3468294128ce32bec0d775ff3131127dd9076
   admiral: 34cb237fa407421eb77ffefe908249af2b58b8d5
+  cloud-prepare: 0c8f6d9cfcc37180d8174413a1205a7e93fcefcd
+  lighthouse: baee7c1ff2655580802fa373d6c4553530ce213f
+  submariner: d19ef68114be8cfda4dda423e45449b579049626
