Advancing 0.17.3 release to status: released
Signed-off-by: Tom Pantelis <tompantelis@gmail.com>

--- a/releases/v0.17.3.yaml
+++ b/releases/v0.17.3.yaml
@@ -2,7 +2,7 @@
 version: v0.17.3
 name: 0.17.3
 branch: release-0.17
-status: installers
+status: released
 components:
   shipyard: d71a03dd873cdbfb6434550c841aa66f673b1dc4
   admiral: 7f1cef27bd08cef94d84c872b41bf6197746792a
@@ -10,3 +10,5 @@ components:
   lighthouse: 427efefa4ceee493b2707723a8b7d075cf7bc11f
   submariner: 21de702b2968ac79a7cfaa9e856d2aebf99d2062
   submariner-operator: 3a6d03d2569160c1d19764a64870fd59ec75d2bc
+  subctl: 98be92a32c1a6707551c696a5fa6185b285a2990
+  submariner-charts: 154197a9e5f2e7096be541ece7f65fa44e104121
