--- a/releases/v0.19.0-rc3.yaml
+++ b/releases/v0.19.0-rc3.yaml
@@ -2,6 +2,7 @@
 version: v0.19.0-rc3
 name: 0.19.0-rc3
 branch: release-0.19
-status: shipyard
+status: admiral
 components:
   shipyard: 35f3468294128ce32bec0d775ff3131127dd9076
+  admiral: 99b5ac397a07a2256f4fa88ef99a5e65f744e149
