Advancing 0.19.0-rc3 release to status: admiral
Signed-off-by: Vishal Thapar <5137689+vthapar@users.noreply.github.com>

--- a/releases/v0.19.0-rc3.yaml
+++ b/releases/v0.19.0-rc3.yaml
@@ -2,6 +2,7 @@
 version: v0.19.0-rc3
 name: 0.19.0-rc3
 branch: release-0.19
-status: shipyard
+status: admiral
 components:
   shipyard: 35f3468294128ce32bec0d775ff3131127dd9076
+  admiral: 8a5ecb962986f6d57d43845e8a3bea8b172f508f
